[project]
name = "rust-web-rcon"
version = "1.0.0"
description = "Docker image providing the websocket Rcon client from Facepunch"
authors = [
    {name = "Max Pfeiffer",email = "max@maxpfeiffer.ch"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "static-site-containerizer==0.2.1"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
bcrypt = "4.3.0"
pre-commit = "4.2.0"
pytest = "8.4.2"
testcontainers = "4.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
